# RepoHub

./: .dockerignore  .env.example  .env.local.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  DOCKER_QUICKSTART.md  Dockerfile  FEATURE_SMART_RECOMMENDATIONS.md  Makefile  README.md  README.tr.md  SETUP_SUMMARY.md  components.json  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  easy_run.sh  easy_setup.sh  fix-ubuntu-name.sql  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
scripts/: init-db.js  test-rate-limit.ts
scripts/migrations/: 003_separate_ubuntu_debian.sql  004_add_opensuse_gentoo.sql  migrate-add-aur-to-repository.sql  migrate-packages-version-length.sql
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx
src/components/: Header.tsx  HeroSection.tsx  Navbar.tsx  OnboardingModal.tsx  PackageBrowser.tsx  PackageBrowserV2.tsx  PlatformSelector.tsx  RecommendationCard.tsx  RecommendationListItem.tsx  RecommendationsSection.tsx  RepoHubApp.tsx  ScriptPreview.tsx  SelectionManager.tsx  SupportModal.tsx  UnifiedPackageManager.tsx
src/constants/: categoryIcons.ts
src/contexts/: LocaleContext.tsx
src/data/: mockData.ts  recommendationPresets.ts
src/hooks/: useRecommendationProfile.ts
src/lib/: rate-limit.ts  scriptGenerator.ts
src/models/: Package.ts
src/services/: archPackageFetcher.ts  aurPackageFetcher.ts  debianPackageFetcher.ts  fedoraPackageFetcher.ts  gentooPackageFetcher.ts  (+8 more)
(+24 files in other folders)
