[package]
name = "repohub-tauri"
version = "0.1.0"
description = "RepoHub desktop client"
edition = "2021"


[lib]
name = "repohub_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"netbsd\", target_os = \"openbsd\") )".dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
